# CnC_and_Red_Alert

./: CMakeLists.txt  LICENSE.md  README-EA.md  README.md
.github/workflows/: cmake-multi-platform.yml
CODE/: 2KEYFRAM.CPP  2SUPPORT.ASM  2TXTPRNT.ASM  2keyfbuf.asm  2keyfbuf.cpp  2keyfram.cpp  ABSTRACT.CPP  ABSTRACT.H  ADATA.CPP  AIRCRAFT.H  ALLOC.CPP  ANIM.CPP  ANIM.CPP.BAK  AUDIO.CPP.BAK  AUDIO.H  B64PIPE.CPP  B64STRAW.CPP  B64STRAW.H  BAR.CPP  BAR.H  BASE.CPP  BASE64.H  BENCH.CPP  BFILE2.MAK  BFIOFILE.CPP  BFIOFILE.H  BLOWFISH.CPP  BLOWFISH.H  BLOWPIPE.CPP  BLOWPIPE.H  BMP8.CPP  BMP8.H  BUFFERX.H  BUGS.TXT  BUILDING.CPP  BUILDING.H  BULLET.CPP  CARGO.CPP  CARRY.CPP  CARRY.H  (+530 more)
CODE/ENG/: CREDITS.BAK  CREDITS.TXT
CODE/ENG/FRE/: CONQUER.TXT
CODE/ENG/GER/: CONQUER.TXT
CODE/WOLAPI/: DOWNLOADDEFS.H  WOLAPI_I.C
CODE/wolapi/: chatdefs.h  netutildefs.h  wolapi.h
IPX/: FIXTHUNK.CPP  IPX16A.ASM  IPXTEST.CPP  MAKEFILE  MAKETH16.BAK  MAKETH16.BAT  MAKETH32.BAK  MAKETH32.BAT  OLTHIPX.ASM  PCMACRO.16  THIPX.ASM  THIPX.BAK  THIPX.THK  THIPX16C.CPP  THIPX32C.CPP  THMAP32.ASM  WWIPX16.ASM
IPX/OK/: IPX16.ASM  IPX16.BAK  IPX16.H  IPX16A.ASM  IPX16C.CPP  IPXTEST.CPP  MAKE.BAK  MAKE.BAT  PCMACRO.16  THIPX.ASM  THIPX.BAK  THIPX.THK  THIPX16C.CPP  THIPX32C.CPP  THMAP16.ASM  THMAP32.ASM  WWIPX.ASM
IPX/OLD/: IPX16A.ASM
LAUNCH/: LAUNCH.ASM  PCMACRO.16
LAUNCHER/: 256BMP.C  CONFIGFILE.CPP  CONFIGFILE.H  DIALOG.CPP  DIALOG.H  DICTIONARY.H  FINDPATCH.CPP  FINDPATCH.H  LAUNCHER.DSP  LAUNCHER1.RC  LOADBMP.CPP  LOADBMP.H  MAIN.CPP  MONOD.CPP  ODEVICE.H  PATCH.CPP  PATCH.H  PROCESS.CPP  PROCESS.H  RESOURCE.H  STREAMER.CPP  STREAMER.H  WDEBUG.CPP  WDEBUG.H  WINBLOWS.CPP  WINBLOWS.H  WSTRING.CPP  WSTRING.H  WSTYPES.H
LAUNCHER/UTIL/: FILED.H  MBOXD.H  MONOD.CPP  MONOD.H  STDERRD.H  STDOUTD.H  STREAMER.CPP  SYSLOGD.CPP  SYSLOGD.H  WDEBUG.CPP  WDEBUG.H
RA/: 2keyfbuf.cpp  ADAMTEMP.MAK  BFILE.MAK  C&CZERO.PJT  CMakeLists.txt  CONQUER.LNT  CWSTUB.C  HEADER.MAC  JOEMAKE.BAT  LIBRARY.TXT  OPTIONS.LNT  RA-HOME.PJT  RA95.PJT  RADOS.PJT  RULES.MAK  STUFF.TXT  TODO.TXT  TURBOC.CFG  WIDEFUNC.MAC  _wsproto.cpp  _wsproto.h  aadata.cpp  adpcm.cpp  aircraft.cpp  alloc.cpp  anim.cpp  anim.h  audio.cpp  bar.h  base.cpp  bbdata.cpp  bdata.cpp  bfiofile.cpp  bigcheck.h  blowfish.h  blwstraw.h  buff.cpp  building.cpp  building.h  bullet.cpp  (+214 more)
RA/ENG/: CONQUER.BAK  CONQUER.TXT  DEBUG.BAK  DEBUG.TXT  MESSAGE.TXT
RA/wolapi/: ftpdefs.h
SDLLIB/: CMakeLists.txt  audio.cpp  buffer.cpp  dipthong.cpp  drawbuff.cpp  drawbuff_sdl.cpp  file.cpp  font.cpp  iconcach.cpp  iff.cpp  keyboard.cpp  mem.cpp  misc.cpp  mouse.cpp  net_select.cpp  palette.cpp  playcd.cpp  shape.cpp  tile.cpp  timer.cpp  wincomm.cpp  window.cpp  wsa.cpp
SDLLIB/include/: audio.h  buffer.h  dipthong.h  drawbuff.h  file.h  font.h  gbuffer.h  iconcach.h  iff.h  keyboard.h  memflag.h  misc.h  modemreg.h  mono.h  mouse.h  net_select.h  palette.h  playcd.h  shape.h  tile.h  timer.h  wincomm.h  wsa.h  ww_win.h  wwlib32.h  wwstd.h
TD/: CC_ICON.RH  CMakeLists.txt  LICENSE.md  aadata.cpp  abstract.cpp  abstract.h  adata.cpp  aircraft.cpp  aircraft.h  anim.cpp  anim.h  audio.cpp  audio.h  base.cpp  base.h  bbdata.cpp  bdata.cpp  building.cpp  building.h  bullet.cpp  bullet.h  cargo.cpp  cargo.h  ccdde.cpp  ccdde.h  ccfile.cpp  ccfile.h  cdata.cpp  cdfile.cpp  cdfile.h  cell.cpp  cell.h  checkbox.cpp  checkbox.h  cheklist.cpp  cheklist.h  colrlist.cpp  colrlist.h  combat.cpp  combuf.cpp  (+244 more)
TOOLS/: ANIMATE.EXE.OLD
TOOLS/AUDIOMAK/: AUDIOMAK.CPP  AUDIOMAK.PJT  MAKEFILE  SCODE.ASM  TASM.CFG  TLINK.CFG  TURBOC.CFG
TOOLS/MIX/: CMakeLists.txt  MIXFILE.CPP  MIXFILE.IDE  MIXFILE.IDE.BAK  file_fn.cpp  mixfile.h
VQ/INCLUDE/: VQ.H
VQ/LIB/: README.TXT
VQ/VQA32/: AUDIO.BAK1  AUDIO.BAK2  AUDIO.CPP  CAPTION.CPP  CAPTION.H  CONFIG.CPP  DRAWER.BAK  DRAWER.CPP  LOADER.BAK  LOADER.CPP  MAKEFILE.BAK  MONODISP.BAK  MONODISP.CPP  TASK.CPP  TASM32.CFG  TLIB.CFG  UNVQBUFF.ASM  UNVQXMDE.ASM.BAK  VQAPLAY.BAK  VQAPLAY.I  VQAPLAYP.H
VQ/VQM32/: AUDUNZAP.ASM  CHRWIDTH.CPP  CRC.H  GRAPHICS.H  HUFFCMP.CPP  HUFFDCMP.ASM  HUFFMAN.H  IFF.H  LCWCOMP.ASM  MAKEFILE  MAKEFILE.BAK  MAKEFILE.BOR  MCGABUF.ASM  MEM.CPP  MIXFILE.CPP  MONO.ASM  MONO.H  PORTIO.ASM  PROFILE.CPP  SOSCODEC.ASM  TASM32.CFG  VB.ASM  VERTAG.CPP  VESABLIT.CPP  VIDEO.CPP
WIN32LIB/: MAKE.BAT  MAKEFILE  MAKEFILE.BOR  MAKE_LIB.MAK  PROJECT.CFG  REBUILD.BAT
WIN32LIB/AUDIO/: MAKEFILE  MAKEFILE.BOR  OLSOSDEC.ASM  SOSCODEC.ASM  SOSDEFS.H  SOSFNCT.H  SOUND.H  SOUNDIO.CPP
WIN32LIB/DIPTHONG/: MAKEFILE  MAKEFILE.BOR  MAKEFILE.WAT  _DIPTABL.CPP
WIN32LIB/DRAWBUFF/: BITBLIT.ASM  BUFFER.CPP  CLEAR.ASM  DRAWBUFF.INC  DRAWLINE.ASM  DRAWRECT.CPP  FILLQUAD.ASM  FILLRECT.ASM  GBUFFER.H  GETCLIP.ASM  GETPIX.ASM  ICONCACH.CPP  ICONCACH.H  MAKEFILE  MAKEFILE.BOR  PUTPIX.ASM  SHADOW.ASM  STAMP.ASM  TOBUFF.ASM  TXTPRNT.ASM
WIN32LIB/EXAMPLE/: GLOBALS.CPP  MAIN.CPP  MAKEFILE  MAKEFILE.WAT  STARTUP.CPP  WWLIB32.H
WIN32LIB/FONT/: FONT.CPP  LOADFONT.CPP  MAKEFILE  MAKEFILE.BOR  SETFPAL.ASM  SET_FONT.CPP
WIN32LIB/IFF/: IFF.CPP  IFF.H  LCWCOMP.ASM  LOAD.CPP  MAKEFILE  MAKEFILE.BOR  MAKEFILE.WAT  WRITEPCX.CPP
WIN32LIB/INCLUDE/: BUFFER.H  DESCMGMT.H  DIFFTB.INC  DRAWBUFF.H  FILETEMP.H  FUNCTION.H  GBUFFER.H  KEYBOARD.H  MEMFLAG.H  MISC.H  (+39 more)
WINVQ/: CMakeLists.txt
WINVQ/VQA32/: AUDIO.CPP  CMakeLists.txt  CONFIG.CPP  DRAWER.CPP  DSTREAM.CPP  MAKEFILE  MAKEFILE.BAK  TASK.CPP  UNVQ.H  VQAFILE.H  VQAPLAY.BAK  VQAPLAYP.H  audio.cpp  caption.cpp  caption.h  config.cpp  drawer.cpp  dstream.cpp  loader.cpp  monodisp.cpp  task.cpp  unvqbuff.cpp  unvqxmde.asm  vertag.cpp  vqafile.h  vqaplay.h  vqaplay.i  vqaplayp.h  vqmstub.cpp
WINVQ/VQA32/OLD/: AUDIO.CPP  BCC32.CFG  CONFIG.CPP  DRAWER.CPP  LOADER.CPP  MAKEFILE.BOR  MAKEFILE.WAT  SOSRES.H  TASK.CPP  UNVQ.H  UNVQBUFF.ASM  UNVQVESA.ASM  VERTAG.CPP  VQAFILE.H  VQAPLAY.H  VQAPLAYP.H
WWFLAT32/: MAKEFILE  MAKE_EXE.MAK  PROJECT.CFG
port/: CMakeLists.txt  commlib.h  ddraw.cpp  ddraw.h  dos.cpp  dos.h  dsound.h  ex_string.h  io.h  modem.h  mpeg.cpp  pcx.h  string.cpp  vqa.cpp  windows.cpp  windows.h
(+577 files in other folders)
